--- a/openmp-runtime/openmp-runtime.tex
+++ b/openmp-runtime/openmp-runtime.tex
@@ -291,6 +291,8 @@ nsample    pid      event          pmc0          pmc1          pmc2
 
 Los experimentos realizados en este trabajo tienen como objetivo motivar la necesidad de que el runtime system de OpenMP sea consciente de las diferencias en rendimiento que los hilos experimentan si paralelizan su ejecución en distintos tipos de cores en un sistema multicore asimétrico. Para ello, se procedió a ejecutar una serie de benchmarks tanto en cores big como small que paralelizan la ejecución de sus bucles con OpenMP mientras se medían diferentes métricas para caracterizar su rendimiento. 
 
+Para parsear los logs de pmctrack y poder generar las gráficas, he creado un script que coge todos los logs de una carpeta filtrando por un array en el que se le puede indicar el número de experimento y utiliza la librería pandas de python junto a matplotlib para crear las diferentes gráficas. Se puede encontrar el script junto a las fuentes de este trabajo en LaTeX en mi repositorio de GitHub~\cite{parsing}.
+
 Para medir el rendimiento he empleado la métrica Speedup Factor o SF, definido como ${MIPS}_{big}/{MIPS}_{small}$, que mide el ratio de rendimiento producido cuando un programa se ejecuta en un core big respecto a uno small. En los siguientes resultados presento dos tipos de gráfica, por una parte una que representa la evolución de los valores de SF medidos a lo largo del tiempo durante la ejecución de los diferentes bucles paralelizados con OpenMP y por otra una que presenta el porcentaje de muestras de SF que se caen en las diferentes particiones del espacio de muestras que se generan al dividirlos en rangos de 0.5.
 
 En las Figuras~\ref{fig:b1}, \ref{fig:b2} y \ref{fig:b3} se puede observar las medidas de Speedup Factor (SF) obtenidas durante la ejecución de 3 benchmarks paralelizados con OpenMP. Se tomaron métricas de la ejecución de 8 benchmarks en total, aunque he incluido las gráficas que representan las clases de comportamiento más dispares observados en todo el conjunto de experimentos. Por una parte existen algunos benchmarks, cómo los observados en las Figuras ~\ref{fig:b1} y \ref{fig:b2}, cuyos valores de SF pueden experimentar una gran variabilidad a lo largo de su ejecución y sus bucles pueden presentar diferencias significativas en el beneficio relativo que obtienen al ejecutarse en un core big respecto a uno little. Además, los valores de SF a lo largo del tiempo de la Figura~\ref{fig:b1} muestran como el comportamiento de los benchmarks atraviesa diferentes fases claramente diferenciadas y mantiene un comportamiento que podría ser predicho si el runtime fuera capaz de darse muestrear los valores de diferentes métricas y ajustar su planificación de forma dinámica en tiempo de ejecución. Por otra parte, existen otros benchmarks con un comportamiento similar al observado en la Figura~\ref{fig:b3}, el 100\% de las muestras obtenidas para el benchmark blackscholes caen en la misma partición (2.5 a 3.0) y como se puede observar en la gráfica de variación a lo largo del tiempo la variabilidad es muy pequeña, presentando unos valores muy próximos a 2.6 durante toda la ejecución. 
@@ -355,6 +357,7 @@ Considero que se podría mejorar enormemente el funcionamiento del runtime syste
 \bibitem{odroid-manual} \textit{Odroid XU4: User Manual}. Hardkernel. \href{http://magazine.odroid.com/odroid-xu4/}{Página web}.
 \bibitem{compproc}Antoniu Pop and Albert Cohen. Preserving high-level semantics of parallel programming annotations through the compilation flow of optimizing compilers. In Proceedings of the 15th Workshop on compilers for Parallel Computers (CPC’10), Vienna, Austria, July 2010. \href{https://hal.inria.fr/inria-00551518}{URL}.
 \bibitem{crucomp}Guía para la construcción de un compilador cruzado. \href{http://preshing.com/20141119/how-to-build-a-gcc-cross-compiler/}{URL}.
+\bibitem{parsing}Fuentes de este trabajo junto al script de python creado para parsear los resultados de pmctrack y generar las gráficas presentadas en este trabajo. \href{https://github.com/mizadri/LaTeX/tree/master/openmp-runtime}{Enlace a GitHub}.
 
 \end{thebibliography}
 
