--- a/spanish-cv/curriculum-vitae.tex
+++ b/spanish-cv/curriculum-vitae.tex
@@ -62,13 +62,29 @@
 \section{Formación académica}
 %\cventry{year--year}{Degree}{Institution}{City}{\textit{Grade}}{Description}  % arguments 3 to 6 can be left empty
 \cventry{2011--2016}{Grado en Ingeniería Informática}{UCM}{Madrid}{\textit{Media: 7,82}}{} % arguments 3 to 6 can be left empty
-\cventry{2016--act.}{Máster en Ingeniería Informática}{UCM}{Madrid}{\textit{Media: 9,12}}{30 créditos ECTS completados (66 matriculados).}
-
+\cventry{2016--2018}{Máster en Ingeniería Informática}{UCM}{Madrid}{\textit{Media: 8,9}}{}
+\cventry{2017--actualidad}{Doctorando en Ingeniería Informática}{DACYA}{Madrid}{}{Contrato predoctoral UCM de personal investigador en formación.}
 
 % \section{Master thesis}
 % \cvitem{title}{\emph{Title}}
 % \cvitem{supervisors}{Supervisors}
 % \cvitem{description}{Short thesis abstract}
+
+\section{Experiencia profesional}
+% \cventry{year--year}{Job title}{Employer}{City}{}{Description line 1\newline{}Description line 2}
+\cventry{Abr. 2016- Ago. 2016}{Becario de desarrollo software}{SATEC}{Madrid}{}{ Desarrollo de aplicaciones web de carácter empresarial con .NET MVC, Razor y jQuery UI, en concreto se participó en la creación de una aplicación web que gestionaba el parque móvil del estado.}
+\cventry{Nov. 2016- Marzo 2017.}{Beca de colaboración con departamentos}{DACYA}{Madrid}{}{Desarrollo y estudio de un planificador en el kernel Linux consciente de la contención de recursos compartidos en sistemas asimétricos. Otorgada por el Ministerio de Educación, Cultura y Deporte.}
+\cventry{Feb. 2017- Marzo 2017.}{Administrador de sistemas}{DACYA}{Madrid}{}{Administración de sistemas Linux y mantenimiento de la infraestructura física y virtualizada.}
+
+\section{Artículos de investigación}
+\begin{itemize}
+\item A. Garcia-Garcia, J. C. Saez, and M. Prieto-Matias. 2017. "Delivering Fairness on Asymmetric Multicore Systems via Contention-Aware Scheduling". 5th Workshop on Runtime and Operating Systems for the Many-core Era. Euro-Par 2017: Parallel Processing Workshops. Springer International Publishing 2018. 610—622.
+\smallskip
+\item A. Garcia-Garcia, J. C. Saez, and M. Prieto-Matias. 2018. "Contention-Aware Fair Scheduling for Asymmetric Single-ISA Multicore Systems". IEEE Transactions on Computers. 67, 12 (Dec 2018), 1703–1719.
+\smallskip
+\item (Presentador) A. Garcia-Garcia, J. C. Saez, F. Castro, M. Prieto-Matias. 2019. "LFOC: A Lightweight Fairness-Oriented Cache Clustering Policy for Commodity Multicores". In Proceedings of the 48th International Conference on Parallel Processing (ICPP 2019).
+\end{itemize}
+
 \section{Premios}
 \cventry{Junio de 2016}{Matrícula de honor en Trabajo de Fin de Grado}{Facultad de Informática, UCM}{}{}{\begin{itemize}
 \item \textbf{Título}: Soporte de sistema operativo para ahorro de energía en plataformas móviles con procesadores multicore asimétricos.
@@ -86,13 +102,6 @@
 \item Evaluación de configuraciones
 \end{itemize}}
 
-\section{Experiencia profesional}
-% \cventry{year--year}{Job title}{Employer}{City}{}{Description line 1\newline{}Description line 2}
-\cventry{Abr. 2016- Ago. 2016}{Becario de desarrollo software}{SATEC}{Madrid}{}{ Desarrollo de aplicaciones web de carácter empresarial con .NET MVC, Razor y jQuery UI, en concreto se participó en la creación de una aplicación web que gestionaba el parque móvil del estado.}
-\cventry{Nov. 2016- actualidad.}{Beca de colaboración con departamentos}{DACYA}{Madrid}{}{Desarrollo y estudio de un planificador en el kernel Linux consciente de la contención de recursos compartidos en sistemas asimétricos. Otorgada por el Ministerio de Educación, Cultura y Deporte.}
-\cventry{Feb. 2017- actualidad.}{Administrador de sistemas}{DACYA}{Madrid}{}{Administración de sistemas Linux y mantenimiento de la infraestructura física y virtualizada.}
-\cventry{Ago. 2016}{Desarrollo de {\color{blue}\href{www.ahoraarganda.es}{página web}} en Wordpress}{Grupo municipal Ahora Arganda}{}{}{}
-
 \section{Otros méritos}
 \cventry{Sept. 2016}{Inglés}{Nivel C1}{}{}{\begin{itemize}
 \item Certificados de la Universidad de Cambridge.
@@ -100,69 +109,32 @@
   \item {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfganJjYmFWdlFoanM}{First Certificate in English}} (FCE), Madrid, Abril de 2012.
   \item {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgcGFJX3VPTGFyUE0}{Certificate in Advanced English}} (CAE), Madrid, Septiembre de 2016.
 \end{itemize}
-\item Formación en la academia Dickens (2011 y 2015).
+\item Formación en la academia Dickens (2011, 2015, 2017-actualidad).
 \item Estancia de 1 mes en Athenry (Irlanda) con una familia nativa durante la que se realizaba un
 curso intensivo de inglés (Agosto de 2010): {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgSmRCM1NQV2lfdGc}{Certificado}}.
 \end{itemize}}
 \cventry{Noviembre 2016}{Big Data: análisis de datos con python}{UCM}{Madrid}{}{Curso de formación continua de la UCM que enseñaba a obtener datos de páginas web, Twitter y ficheros en distintos formatos (.csv, .xls, .txt, etc.) para luego trabajar con ellos usando diferentes librerías científicas de python: numpy, matplotlib y pandas. {\color{blue}\href{https://drive.google.com/open?id=0B0Q9HPrQCrfgbFMwUUdOQXd1QWs}{Certificado}}.}
 \section{Otros aspectos}
 \cventry{Conocimientos}{Lenguajes de programación}{}{}{}{\begin{itemize}
-\item \textbf{Python}
-\begin{itemize}
-  \item Pandas
-  \item Numpy
-  \item Matplotlib
-  \item Telegram API
-\end{itemize}
-\item \textbf{C}
-\begin{itemize}
-  \item Módulos del kernel
-  \item Sockets
-  \item Tuberías
-\end{itemize}
-\item \textbf{C++}
-\begin{itemize}
-  \item OpenMP
-  \item MARE
-  \item OpenGL
-\end{itemize}
-\item \textbf{C\#}
-\begin{itemize}
-  \item ASP.NET MVC
-  \item Razor
-  \item jQuery UI
-\end{itemize}
-\item \textbf{Aplicaciones Android} ({\color{blue}\href{https://github.com/android-fridge/thefridge}{TheFridge}})
-\item \textbf{Java}
-\begin{itemize}
-  \item Hibernate
-  \item JSP
-  \item Maven
-\end{itemize}
-\item \textbf{PHP}
-\item \textbf{JavaScript} (jQuery)
-\item \textbf{CSS} (Boostrap)
-\item \textbf{Bash}
-\medskip
-\end{itemize}}
+\item \textbf{Python}: pandas, numpy, matplotlib, Telegram API.
+\smallskip
+\item \textbf{C}: Módulos del kernel,  Sockets, Tuberías.
+\smallskip
+\item \textbf{C++}: OpenMP, MARE, OpenGL.
+\smallskip
+\item \textbf{C\#}: ASP.NET MVC, Razor, jQuery UI.
+\smallskip
+\item \textbf{Java}: Aplicaciones Android ({\color{blue}\href{https://github.com/android-fridge/thefridge}{TheFridge}}), Hibernate, JSP, Maven.
+\smallskip
+\item \textbf{Web}: PHP, JavaScript (jQuery), CSS (Boostrap).
+\smallskip\end{itemize}}
 \cventry{}{Otras tecnologías}{}{}{}{\begin{itemize}
 \item \textbf{Software de control de versiones} ({\color{blue}\href{https://github.com/mizadri/}{GitHub}})
-\medskip
-\item \textbf{Bases de datos}
-  \begin{itemize}
-  \item SQL
-  \item MongoDB
-  \item Neo4J
-\end{itemize}
-\medskip
-\item \textbf{Big Data}
-\begin{itemize}
-  \item Map Reduce
-  \item Spark
-  \item Hadoop File System
-\end{itemize}
-\medskip
-\item \textbf{Machine Learning} ({\color{blue}\href{https://github.com/mizadri/big-data}{Implementaciones en python}}):
+\smallskip
+\item \textbf{Bases de datos}: SQL, MongoDB, Neo4J.
+\smallskip
+\item \textbf{Big Data}: Map Reduce, Spark, Hadoop File System.
+\smallskip\item \textbf{Machine Learning} ({\color{blue}\href{https://github.com/mizadri/big-data}{Implementaciones en python}}):
   \begin{itemize}
     \item Árboles de clasificación ID3.
     \item Índice completo (compresión de datos con variable-bytes, elias-gamma o elias-delta).
