--- a/spanish-cv/curriculum-vitae.tex
+++ b/spanish-cv/curriculum-vitae.tex
@@ -82,7 +82,7 @@
 \smallskip
 \item A. Garcia-Garcia, J. C. Saez, and M. Prieto-Matias. 2018. "Contention-Aware Fair Scheduling for Asymmetric Single-ISA Multicore Systems". IEEE Transactions on Computers. 67, 12 (Dec 2018), 1703–1719.
 \smallskip
-\item (Presentador) A. Garcia-Garcia, J. C. Saez, F. Castro, M. Prieto-Matias. 2019. "LFOC: A Lightweight Fairness-Oriented Cache Clustering Policy for Commodity Multicores". In Proceedings of the 48th International Conference on Parallel Processing (ICPP 2019).
+\item (Ponente) A. Garcia-Garcia, J. C. Saez, F. Castro, M. Prieto-Matias. 2019. "LFOC: A Lightweight Fairness-Oriented Cache Clustering Policy for Commodity Multicores". In Proceedings of the 48th International Conference on Parallel Processing (ICPP 2019).
 \end{itemize}
 
 \section{Premios}
